# semestr4_homework3

./: Autotest.cpp  Autotest.h  CIntN.cpp  CIntN.h  CIntN0.cpp  CIntN0.h  CIntN1.cpp  CIntN1.h  CMakeLists.txt  Factory.h  OpenMP.cpp  README.md  data.txt  homework1.cpp
